# pylate

./: .gitignore  .pre-commit-config.yaml  404.html  CNAME  LICENSE  Makefile  PR_DESCRIPTION.md  README.md  compose.yml  conftest.py  distillation_evaluation_results.csv  evaluation_beir.py  evaluation_miracl.py  index.html  kd_training.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  results.csv  ruff.toml  setup.py  sitemap.xml  test_faiss.py  training.py
.github/workflows/: documentation.yaml  linter.yml  plaid-tests.yml  publish.yml  python-tests.yml
api/evaluation/ColBERTDistillationEvaluator/: index.html
api/evaluation/ColBERTTripletEvaluator/: index.html
api/evaluation/NanoBEIREvaluator/: index.html
api/evaluation/PyLateInformationRetrievalEvaluator/: index.html
api/evaluation/evaluate/: index.html
api/evaluation/get-beir-triples/: index.html
api/evaluation/load-beir/: index.html
api/evaluation/load-custom-dataset/: index.html
api/hf-hub/PylateModelCardData/: index.html
api/indexes/PLAID/: index.html
api/indexes/Voyager/: index.html
api/losses/CachedContrastive/: index.html
api/losses/Contrastive/: index.html
api/losses/Distillation/: index.html
api/models/ColBERT/: index.html
api/models/Dense/: index.html
api/overview/: index.html
api/rank/RerankResult/: index.html
benchmarks/: README.md  bench_flash_backend.py
docs/: .pages  CNAME  index.md  xtr_cached_contrastive.md
docs/api/: overview.md
docs/benchmarks/: .pages  benchmarks.md  models.md
docs/css/: version-select.css
docs/documentation/: .pages  datasets.md  evaluation.md  fastapi.md  retrieval.md  server.md  training.md
docs/js/: version-select.js
docs/models/: .pages  models.md
docs/parse/: __main__.py
docs/stylesheets/: extra.css
documentation/datasets/: index.html
documentation/evaluation/: index.html
documentation/fastapi/: index.html
documentation/retrieval/: index.html
documentation/training/: index.html
evaluation/: beir.py  beir_dataset.py  custom_dataset.py  miracl.py  miracl_dataset.py
examples/: skiplist_performance_demo.py
examples/evaluation/: beir_dataset.py  beir_dataset_plaid.py  beir_dataset_xtr.py  benchmark_index_beir.py  custom_dataset.py  longembed_dataset.py
examples/train/: MATRYOSHKA_TOKEN_SELECTION_REPORT.md  contrastive.py  gte_modern_colbert.py  gte_modern_colbert_matryoshka_doc_tokens.py  gte_modern_colbert_matryoshka_doc_tokens_full.py  gte_modern_colbert_matryoshka_hierarchical_pooling.py  gte_modern_colbert_matryoshka_importance.py  gte_modern_colbert_matryoshka_soft_topk.py  knowledge_distillation.py  multimodal_colbert.py  push_to_hub.py  reason_moderncolbert.py  run_matryoshka_experiments.sh  test_cached_xtr.py  xtr_contrastive.py  xtr_knowledge_distillation.py
giga_cherche/: ColBERTDataCollator.py  __init__.py  util.py
giga_cherche/data_collator/: __init__.py  colbert.py  colbert_data_collator.py
giga_cherche/evaluation/: ColBERTTripletEvaluator.py  __init__.py  beir.py  colbert_distillation.py  colbert_distillation_evaluator.py  colbert_triplet.py  colbert_triplet_evaluator.py
giga_cherche/indexes/: BaseIndex.py  WeaviateIndex.py  __init__.py  base.py  voyager.py  weaviate.py
giga_cherche/losses/: ColBERTLoss.py  __init__.py  colbert.py  colbert_loss.py  contrastive.py  distillation.py
giga_cherche/models/: Dense.py  LinearProjection.py  __init__.py  colbert.py
giga_cherche/rank/: __init__.py  rank.py
giga_cherche/rerank/: colbert.py
giga_cherche/reranker/: ColBERTReranker.py  __init__.py
giga_cherche/retrieve/: colbert.py
giga_cherche/retriever/: ColBERTRetriever.py  __init__.py
giga_cherche/scores/: colbert_score.py  scores.py
giga_cherche/utils/: __init__.py  collator.py  constants.py  dataset_processing.py  iter_batch.py  processing.py  tensor.py
models/models/: index.html
parse/__main__/: index.html
pylate/: __init__.py  __version__.py  model_card.py  model_card_template.md
pylate/evaluation/: InformationRetrievalEvaluator.py  __init__.py  beir.py  code_search_network_evaluator.py  colbert_distillation.py  colbert_triplet.py  custom_dataset.py  nanoBEIR.py  nano_beir_evaluator.py  nano_beir_evaluator_prompt.py  plaid_information_retrieval_evaluator.py  pylate_information_retrieval_evaluator.py
pylate/hf_hub/: __init__.py  model_card.py  model_card_template.md
pylate/indexes/: __init__.py  base.py  fast_plaid.py  plaid.py  scann.py  stanford_plaid.py  utils.py  voyager.py  warp.py
pylate/losses/: __init__.py  cached_contrastive.py  contrastive.py  distillation.py  matryoshka_doc_tokens.py  matryoshka_hierarchical_pooling.py  matryoshka_importance.py  matryoshka_soft_topk.py
pylate/models/: Dense.py  Quantization.py  __init__.py  colbert.py  hypercolbert.py  hypercolbert_dotproduct.py
pylate/pooling/: __init__.py  pooling_functions.py
pylate/rank/: __init__.py  rank.py
pylate/retrieve/: __init__.py  base.py  colbert.py  xtr.py
pylate/scores/: __init__.py  _flash_backend.py  colbert.py  scores.py  similarity_functions.py  xtr.py
pylate/server/: README.md  server.py
pylate/utils/: __init__.py  collator.py  distributed.py  huggingface_models.py  iter_batch.py  multi_process.py  processing.py  tensor.py
scripts/: sweep_cached_xtr.sh
search/: search_index.json
tests/: test_add_special_tokens.py  test_cached_contrastive.py  test_colbert_scores.py  test_contrastive.py  test_fast_plaid.py  test_imputation.py  test_kd.py  test_model.py  test_model_loading.py  test_plaid.py  test_prefixes.py  test_retriever.py  test_scann.py  test_scores_flash.py  test_skiplist_mask.py  test_skiplist_optimization.py  test_warp.py  test_xtr_retriever.py  test_xtr_scores.py  test_xtr_scores_fn.py  test_xtr_scoring.py
train/: knowledge_distillation.py  triplet.py
(+148 files in other folders)
